# war

./: .gitignore  .treeclipignore  Cargo.toml  Justfile  LICENSE  README.md
war-cli/: Cargo.toml
war-cli/src/: cli.rs  dispatch.rs  main.rs
war-cli/src/commands/: go.rs  mod.rs  rust.rs
war-core/: Cargo.toml
war-core/src/: config.rs  error.rs  lib.rs  shell.rs  types.rs
war-core/tests/: config_integration_test.rs
war-go/: Cargo.toml
war-go/src/: cache.rs  get.rs  init.rs  lib.rs  offline.rs  online.rs  vendor.rs  verify.rs
war-go/tests/: cache_info_test.rs  get_integration_test.rs  init_integration_test.rs  offline_integration_test.rs  vendor_parser_test.rs
war-rust/: Cargo.toml
war-tui/: Cargo.toml
