[package]
name = "war-cli"
description = "Command-line interface for the war offline development toolkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "war"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_derive.workspace = true
dialoguer.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Local workspace crates
war-core = { path = "../war-core" }
# war-go = { path = "../war-go" }  # Uncomment in Phase 1

[dev-dependencies]
tempfile.workspace = true
