[package]
name = "war-core"
description = "Shared domain logic and types for the war CLI toolkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies (inherited)
#anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true