[package]
name = "war-go"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
hex = "0.4.3"
rayon = "1.11.0"
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = "1.51.1"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zip = "8.5.1"
