[package]
name = "war-go"
description = "Go-specific domain logic for the war offline development toolkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async & concurrency
tokio.workspace = true             # Async spawning of go commands (go get, go mod vendor, etc.)
rayon.workspace = true             # Parallel .zip creation during cache reconstruction (CPU-bound)

# Serialization
serde.workspace = true
serde_json.workspace = true             # Generating .info files for Go module cache (JSON format)

# File operations
zip.workspace = true               # Creating .zip archives per module for ~/go/pkg/mod
tempfile.workspace = true         # Atomic writes: write to temp dir, then rename() into cache
dirs.workspace = true              # Resolving ~/go/pkg/mod path cross-platform

# Utilities
tracing.workspace = true          # Structured logging for --verbose mode
chrono.workspace = true           # Timestamps in reconstructed .info files

# Local workspace crates
war-core = { path = "../war-core" }     # Shared WarError, WarConfig, ModuleInfo types

[dev-dependencies]
tempfile.workspace = true
