[package]
name = "war-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
dialoguer = "0.12.0"
ratatui = "0.30.0"
tokio = "1.51.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zip = "8.5.1"
